--- a/finding_the_gradient.ipynb
+++ b/finding_the_gradient.ipynb
@@ -54,7 +54,12 @@
         "##Automatic Differentiation\n",
         "Deep learning software takes care of these details automatically. The software implementations of any mathematical expressions in a deep learning package have extra machinery for receiving and passing on derivative terms appropriately.\n",
         "\n",
-        "Below is an example of how this works in the PyTorch deep-learning package. PyTorch calls variables \"tensors\". This machinery is active for tensors that have a property called \"requires_grad\" set to True. To illustrate, the code below creates variables, $a=2$, $b=0$, and $c=(a-b)^2$. The derivative of $c$ with respect to $a$ and $b$ is then calculated by calling the method, c.backward(). To run this code, hover over the code until the play button appears (a circle with a triangle inside) and then press the button. It will take a few seconds to import the \"torch\" library but the rest of the code runs very quickly."
+        "Below is an example of how this works in the PyTorch deep-learning package. PyTorch calls variables \"tensors\". This machinery is active for tensors that have a property called \"requires_grad\" set to True. To illustrate, the code below creates variables, $a=2$, $b=0$, and $c=(a-b)^2$. The derivative of $c$ with respect to $a$ and $b$ is then calculated by calling the method, c.backward().\n",
+        "\n",
+        "Try running this code. It will take a few seconds to import the \"torch\" library but the rest of the code should run very quickly.\n",
+        "\n",
+        "*Hover your cursor over the cell below to reveal the play button (a circle with a triangle inside). Click the play button to run the code in the cell. You may see a warning that the code was not authored by Google, which operates this web service for code notebooks. If you see that warning, click \"Run anyway\". You may also be asked to sign in to a Google account. If you do not have a Google or Gmail account, then you can still read this and other notebooks in this course, but you will not be able to run their code. If you like, you can easily create a Google account now by following the sign-in link and clicking \"Create account\".*\n",
+        "\n"
       ]
     },
     {
@@ -70,13 +75,13 @@
       ],
       "metadata": {
         "id": "wj7kWOLObUQK",
-        "outputId": "5fa323a0-2eaa-4987-f46c-d904341f009f",
+        "outputId": "212dd058-9844-4229-c3e2-83ecebb55c75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "wj7kWOLObUQK",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
