--- a/ehr_embeddings.ipynb
+++ b/ehr_embeddings.ipynb
@@ -31,11 +31,9 @@
         "#Encoding an Electronic Health Record (EHR)\n",
         "A deep network may need EHR information from multiple modalities to make the best inferences. For example, in the recent literature, ICD discharge codes have been inferred more accurately by systems that use the full record of a hospital visit than by systems that use only a discharge letter as input.\n",
         "\n",
-        "You have already seen how to encode notes and images as vectors. As an additional example, consider how to encode a 12-lead ECG order. Most elements of the order are selected from drop-down lists in the EHR interface at the time of order. Each item in each drop-down list can be added to the system's vocabulary. In a state-of-the-art system, this vocabulary would be one-hot encoded and fed into a transformer. The transformer would learn optimal embedding vectors, attention matrices, etc. for a self-supervised task, and then fine tuned to answer questions, or follow instructions, or perform some other particular task. However, this process is too complex and time-consuming to work through here.  \n",
+        "Consider further how to encode orders from an EHR. Some elements of an order (e.g., its priority) may have only a few possible values, and these can be added to the system's vocabulary. An order may also contain a quantity. One way to encode a quantity as a vector is to approximate the range of possible values (say 0 to 1) in discrete steps (say, 0.00, 0.01, 0.02, etc.), add each of these to the vocabulary, and use the one closest to the actual value. In a state-of-the-art system, these vocabulary items would be one-hot encoded and fed into a transformer. The transformer would learn optimal embedding vectors, attention matrices, and so on for a self-supervised task. It would then be fine tuned to answer questions, follow instructions, or perform some other particular task.\n",
         "\n",
-        "Instead, as a simplified example, the code below reads a patient's orders from an electronic health record and encodes the elements of each order using pre-trained word embeddings.\n",
-        "\n",
-        "Start by downloading a set of pre-trained embeddings. The embeddings below are similar to word2vec embeddings, and should only take a few seconds to download.\n",
+        "The above process is too complex and time-consuming to work through here. Instead, as a simplified example, the code below reads a patient's orders from an electronic health record and encodes elements of each order using pre-trained word embeddings. This example uses GloVe embeddings, which are not unlike word2vec embeddings.\n",
         "\n",
         "*Run the code below to download pretrained word embeddings. The code will also print an example vector for the word \"cortisol\".*"
       ],
@@ -55,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zry9tFmXVq5W",
-        "outputId": "4636307d-c38c-4cce-dc8f-1ff78e2124d0"
+        "outputId": "1ed9196e-1fd6-4cfd-c11a-012900ac1c6f"
       },
       "execution_count": 1,
       "outputs": [
@@ -63,7 +61,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[=================================================-] 99.6% 104.4/104.8MB downloaded\n",
+            "[==================================================] 100.0% 104.8/104.8MB downloaded\n",
             "[-0.042121 -0.30836  -1.2449    2.0054    0.82295   2.0069   -0.20042\n",
             " -0.73573   1.2235    0.013556  0.47971   0.78728  -0.43291   0.77171\n",
             "  0.46065   1.0751   -0.73819   1.2626    1.9331   -0.31433  -0.46394\n",
@@ -75,7 +73,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The next step is to query a patient's orders from an EHR system. To make this more realistic, the code below uses the HL7 FHIR protocol to query a fictional EHR. This will require importing a package called \"fhirclient\". However, fhirclient is not yet installed on the server where you are running this code.\n",
+        "Your goal is to use these embeddings to encode a patient's orders in a suitable vector form for input to a deep network. To make this more realistic, let's use the HL7 FHIR protocol to query a fictional EHR. This will require importing a package called \"fhirclient\". However, fhirclient is not yet installed on the server where you are running this code.\n",
         "\n",
         "*Run the code below to download and install fhirclient on this server.*"
       ],
@@ -93,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9SZ9fyXvB25r",
-        "outputId": "51155207-aacb-4ea1-d49f-2718c0f525f6"
+        "outputId": "fa1a143c-d464-496b-c2e3-e0add3b16da4"
       },
       "execution_count": 2,
       "outputs": [
@@ -102,15 +100,15 @@
           "name": "stdout",
           "text": [
             "Collecting git+https://github.com/smart-on-fhir/client-py.git\n",
-            "  Cloning https://github.com/smart-on-fhir/client-py.git to /tmp/pip-req-build-a7tt4a4j\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/smart-on-fhir/client-py.git /tmp/pip-req-build-a7tt4a4j\n",
+            "  Cloning https://github.com/smart-on-fhir/client-py.git to /tmp/pip-req-build-ijwc79ng\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/smart-on-fhir/client-py.git /tmp/pip-req-build-ijwc79ng\n",
             "  Resolved https://github.com/smart-on-fhir/client-py.git to commit df634f5354aec83335ca45648552f84d1964c033\n",
             "  Running command git submodule update --init --recursive -q\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from fhirclient==4.1.0) (2.31.0)\n",
             "Collecting isodate (from fhirclient==4.1.0)\n",
             "  Downloading isodate-0.6.1-py2.py3-none-any.whl (41 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m1.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from isodate->fhirclient==4.1.0) (1.16.0)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->fhirclient==4.1.0) (3.2.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->fhirclient==4.1.0) (3.4)\n",
@@ -118,8 +116,8 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->fhirclient==4.1.0) (2023.7.22)\n",
             "Building wheels for collected packages: fhirclient\n",
             "  Building wheel for fhirclient (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fhirclient: filename=fhirclient-4.1.0-py2.py3-none-any.whl size=683652 sha256=0aae2fef54dcf0493d8760da8f9def6424af2ddea8d344526aee3ee13e01ef49\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-cucbhknp/wheels/7a/00/1e/70a8a264841af3999df89cebfed1c1a0da68e8dac05f22d1af\n",
+            "  Created wheel for fhirclient: filename=fhirclient-4.1.0-py2.py3-none-any.whl size=683652 sha256=ffb353b87580b5b670c0da2f38f015077e8d1b2acdd16fcf2498ca7f6f0cd5b9\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-d4_c2jcq/wheels/7a/00/1e/70a8a264841af3999df89cebfed1c1a0da68e8dac05f22d1af\n",
             "Successfully built fhirclient\n",
             "Installing collected packages: isodate, fhirclient\n",
             "Successfully installed fhirclient-4.1.0 isodate-0.6.1\n"
@@ -130,7 +128,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It is now possible to import code from the fhirclient package and connect to an EHR that supports the HL7 FHIR protocol. Rather than accessing real patient data, the code below connects to a fictional EHR provided by the HL7 organization.\n",
+        "It is now possible to import code from the fhirclient package and connect to an EHR that supports the HL7 FHIR protocol. Rather than accessing real patient data, you will connect to a fictional EHR provided by the HL7 health data standards organization.\n",
         "\n",
         "*Run the code below to connect to a fictional EHR.*"
       ],
@@ -153,7 +151,7 @@
       "metadata": {
         "id": "Nq3wGe-UB1rC"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,8 +170,6 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "vector_length = 25 # our embedding vectors are 25 numbers long\n",
-        "\n",
         "def get_word_vector(word):\n",
         "  if vectors.__contains__(word):\n",
         "    return vectors.get_vector(word)\n",
@@ -183,15 +179,15 @@
       "metadata": {
         "id": "tBp7rRBIK59X"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "In order for a deep network to use information about an order, it is necessary to encode different elements of the order as vectors. Since the order structure in the EHR may be complex, one way forward is to write functions for each required element of information to extract this information and produce a corresponding vector. For simplicity, the code below defines functions that produce vectors for the text-based order description and the order status.\n",
+        "In order to make information about an order available to a deep network, it is necessary to encode different elements of the order as vectors. Since the order structure in the EHR may be complex, one way forward is to write a function for each required element of information, to extract this information and produce a corresponding vector. For simplicity, the functions below produce vectors for the order status and the text-based order description.\n",
         "\n",
-        "*Run the code below to create functions that produce vectors for an order's status and description. *"
+        "*Run the code below to create functions that produce vectors for an order's status and description.*"
       ],
       "metadata": {
         "id": "g2DcbSbcwtiB"
@@ -211,7 +207,7 @@
         "  description = order.resource.code.coding[0].display\n",
         "  description = re.sub('[^\\w ]', '', description)\n",
         "  words = description.lower().split()\n",
-        "  description_vector = np.zeros(vector_length)\n",
+        "  description_vector = np.zeros(25)\n",
         "  for word in words:\n",
         "    vector = get_word_vector(word)\n",
         "    if vector is not None:\n",
@@ -222,7 +218,7 @@
       "metadata": {
         "id": "UR9obPYmwuv1"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -239,7 +235,7 @@
       "source": [
         "import re\n",
         "\n",
-        "patient_mrn = '2782378'\n",
+        "patient_mrn = '2782378' # a fictional patient's medical record number\n",
         "bundle = sr.ServiceRequest.where(struct={'subject': patient_mrn}).perform(ehr.server)\n",
         "\n",
         "order_vectors = [] # start with empty list of vectors\n",
@@ -254,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jjovjehLSDL",
-        "outputId": "83046609-8afd-485d-b564-38a881430d46"
+        "outputId": "d2cedcbd-2d81-4d52-87ef-913303d11fa6"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +391,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This list of numbers looks meaningless to us, but it contains a concise summary of the patient's orders in exactly the form that a deep network needs. This is not so strange. Consider that our brains receive information only in the form of patterns of action potentials from sensory organs. What we have created here is something like a sensory organ for a deep network, one that senses electronic health records directly."
+        "This list of numbers looks meaningless to us, but it contains a concise summary of the patient's orders in a form that a deep network can use. This is not so strange. Consider that our brains receive information only in the form of patterns of action potentials from sensory organs. What you have created here is something like a sensory organ for a deep network, one that senses EHR orders directly."
       ],
       "metadata": {
         "id": "2XURMUIzMQp_"
