--- a/fraction_object.ipynb
+++ b/fraction_object.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMG2SLVgzbt0BM9cWfXn8tq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "6-5BJrHQK145"
       },
@@ -43,11 +42,33 @@
         "    print('{}/{}'.format(self.numerator, self.denominator))\n",
         "\n",
         "  def print_as_decimal(self):\n",
-        "    print(self.numerator/self.denominator)\n",
-        "\n",
+        "    print(self.numerator/self.denominator)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "three_quarters = Fraction(3, 4)\n",
         "three_quarters.print_as_fraction()\n",
         "three_quarters.print_as_decimal()"
+      ],
+      "metadata": {
+        "id": "H4uTKqNnlJYf",
+        "outputId": "7c20decd-e037-4507-8dd1-79a081319a6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3/4\n",
+            "0.75\n"
+          ]
+        }
       ]
     }
   ]
